# ccore

./: .gitignore  CMakeLists.txt  EnvTest  EnvTest.c  main.c  mclib.h  readme.md  temp.md
c000abc/: CMakeLists.txt  main.c
c001basics/: __sources  addr_to_func.c  addr_void.c  addresses_pointers.c  array_2_dim.c  array_append_remove.c  array_copy.c  array_empty_test.c  array_offset_left.c  array_offset_right.c  array_reverse.c  array_sort_inserts.c  break_continue.c  comp_steps.c  comp_steps_prepared.c  data_types.c  decompose.c  division.c  dont.c  dynamic_memory.c  dynamic_traject.c  eg_task_25.c  eg_task_27.c  errors.c  errors_prep.c  eval_test.c  fib_time_lib.c  for_while.c  functions.c  hello.c  if_else.c  inductive.c  inductive2.c  max_num.c  max_num2.c  max_num3.c  memory_errors.c  never_goto_example.c  never_goto_example2.c  num_filter.c  (+11 more)
c002basics2/: c011_structures.c  c012_pointers.c  c013_files.c  c014_test_file.txt  c01_hello.c  c02_vars.c  c02_vars_data_types.c  c03_arrays.c  c04_if_else.c  c05_argc_argv.c  c06_switch_case.c  c07_loops.c  c08_loops2.c  c09_functions.c  c10_my_functions.h  c11_scanf.c  tempCodeRunnerFile.c
c002basics3/: CMakeLists.txt  c001_first_program.c  c002_variables.c  c003_if_else.c  c004_scanf.c  c005_procs_funcs.c  c006_loops_arrays.c  c007_char_string_libs.c  c008_cyrillic_input_local.c  c009_ops_do_while_for.c  c010_n_dim_array_matrix.c  c011_game_1.c  c011_game_dog_apples.c  c012_game_1_temp.c  c012_temp_random.c  c013_define_macros_random.c  c014_macros_random_task.c  c015_struct_typedef_visible.c  c016_convert_types.c  (+28 more)
(+177 files in other folders)
